--- a/docs/assets/style/pages.css
+++ b/docs/assets/style/pages.css
@@ -69,7 +69,7 @@ td {
   padding-left: 20rem;
 }
 .page-edit {
-  max-width: 740px;
+  max-width: 936px;
   margin: 0 auto;
   padding: 2rem 2.5rem;
   margin-top: 3rem;
@@ -205,9 +205,10 @@ td {
   border-right: 6px solid #ccc;
 }
 .theme-default-content:not(.custom) {
-  max-width: 740px;
+  max-width: 936px;
   margin: 0 auto;
   padding: 2rem 2.5rem;
+  background-color: var(--neutral-color-0);
 }
 @media (max-width: 959px) {
   .theme-default-content:not(.custom) {
